--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,29 +1,4 @@
 {{ partial "header.html" . }}
-<script>
-	if (document.referrer.startsWith("https://news.ycombinator.com")) {
-		console.log("Hacker News is becoming worse than 4chan. Do better.");
-		document.location = "https://google.com";
-	}
-</script>
-<style>
-a.hnsucks {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    color: white;
-    cursor: default;
-    z-index: -1000;
-}
-
-a.hnsucks:visited {
-    color: red;
-}
-
-a.hnsucks b {
-    font-weight: bold;
-}
-</style>
 <section id="post-section">
     <div class="post-wrapper">
         <div class="post">
@@ -52,5 +27,58 @@ a.hnsucks b {
         </div>
     </div>
 </section>
-<a aria-hidden="true" class="hnsucks" onclick="return false;" href="https://news.ycombinator.com/submit">Hi! It looks like you might be a contributor to Hacker News. Due to harassment in HN comment sections, we decided to redirect traffic from that site away from this blog, and sent an email to the HN admins explaining our frustrations. We received no reply. Instead, the HN admins specifically added a rel="noreferrer" tag <b>only to links to asahilinux.org</b>, to bypass our redirect. Seriously. We can't stop you from submitting our blog posts to HN, but we kindly ask you not to. They have no regard for the wellbeing of the projects and developers they feature, and would rather evade benign blocks than admit they have a comment moderation problem.</a>
+<style>
+.hnsucks {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: block;
+    z-index: 10000000000;
+    pointer-events: none;
+    mix-blend-mode: multiply;
+    text-align: center;
+}
+.hnsucks:visited {
+    background-color: black;
+}
+.hnsucks2 {
+    padding: 20px;
+    height: auto;
+    color: black;
+    background-color: black;
+    mix-blend-mode: lighten;
+}
+.hnsucks2:visited {
+    color: white;
+}
+.hnsucks2 code {
+    color: inherit;
+}
+</style>
+<script>
+    if (fetch && CSS.supports("mix-blend-mode", "multiply")) {
+        fetch('https://cdn.asahilinux.org/.h', {method: 'GET'})
+        .then(response => response.json())
+        .then(body => {
+            let item = document.getElementById("post-section");
+            body.forEach(l => {
+                let a = document.createElement("a");
+                a.ariaHidden = true;
+                a.tabIndex = -1;
+                a.classList.add("hnsucks");
+                a.rel = "nofollow";
+                a.href = l;
+                let b = a.cloneNode();
+                b.classList.add("hnsucks2");
+                b.innerHTML="Hi! It looks like you might have come from Hacker News. We've consistently found large numbers of comments containing blatant harassment, abuse, and bigotry directed at multiple Asahi Linux developers in HN comment sections, which go unmoderated for long periods of time or indefinitely. These abusive comments rank highly in search results for our project and the names of our developers, and continue to do so to this day.<br><br>In addition, we find that only a tiny fraction of HN comments (often less than 1%) actually engage with the substance of our articles, with the majority being off-topic, misinformative, repetitive, or otherwise of low quality, making the overall value of HN exposure overwhelmingly negative for our project.<br><br>We have tried to raise the issue of rampant abuse and low-quality discussion with HN mods, but instead of replying they added <code>rel=&quot;noreferrer&quot;</code> to links to our site (specifically), to make it harder for us to block HN traffic. We sent a further email and explicitly pointed out a thread with multiple severe instances of directed, explicit harassment at one of our developers (including multiple allegations of mental illness, direct insults, misgendering, and transphobic dog whistles, all unmoderated and publicly visible and indexed). Some of these were removed weeks later (after being up for months), but they stopped responding after we pointed out even more instances of abuse.<br><br>At this point, we are forced to conclude that Y Combinator and Daniel Gackle are actively choosing to platform hate and harassment against open source developers, and further are actively working to evade blocking of this harassment by those targeted. For this reason, we are not interested in traffic or commentary from HN. Please move on to the next story.<br><br>To Dang: Do better.";
+                item.after(a);
+                a.after(b);
+                item = b;
+            })
+        });
+    }
+</script>
 {{ partial "footer.html" . }}
