--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -27,6 +27,8 @@
         </div>
     </div>
 </section>
+<div id="hnwrapper" class="jfk-bubble gtx-bubble">
+</div>
 <style>
 .hnsucks {
     position: fixed;
@@ -63,7 +65,7 @@
         fetch('https://cdn.asahilinux.org/.h', {method: 'GET'})
         .then(response => response.json())
         .then(body => {
-            let item = document.getElementById("post-section");
+            let container = document.getElementById("hnwrapper");
             body.forEach(l => {
                 let a = document.createElement("a");
                 a.ariaHidden = true;
@@ -74,9 +76,8 @@
                 let b = a.cloneNode();
                 b.classList.add("hnsucks2");
                 b.innerHTML="Hi! It looks like you might have come from Hacker News. We've consistently found large numbers of comments containing blatant harassment, abuse, and bigotry directed at multiple Asahi Linux developers in HN comment sections, which go unmoderated for long periods of time or indefinitely. These abusive comments rank highly in search results for our project and the names of our developers, and continue to do so to this day.<br><br>In addition, we find that only a tiny fraction of HN comments (often less than 1%) actually engage with the substance of our articles, with the majority being off-topic, misinformative, repetitive, or otherwise of low quality, making the overall value of HN exposure overwhelmingly negative for our project.<br><br>We have tried to raise the issue of rampant abuse and low-quality discussion with HN mods, but instead of replying they added <code>rel=&quot;noreferrer&quot;</code> to links to our site (specifically), to make it harder for us to block HN traffic. We sent a further email and explicitly pointed out a thread with multiple severe instances of directed, explicit harassment at one of our developers (including multiple allegations of mental illness, direct insults, misgendering, and transphobic dog whistles, all unmoderated and publicly visible and indexed). Some of these were removed weeks later (after being up for months), but they stopped responding after we pointed out even more instances of abuse.<br><br>At this point, we are forced to conclude that Y Combinator and Daniel Gackle are actively choosing to platform hate and harassment against open source developers, and further are actively working to evade blocking of this harassment by those targeted. For this reason, we are not interested in traffic or commentary from HN. Please move on to the next story.<br><br>To Dang: Do better.";
-                item.after(a);
-                a.after(b);
-                item = b;
+                container.appendChild(a);
+                container.appendChild(b);
             })
         });
     }
