index: Drop ALARM for now, point people at the Fedora remix page.
It's increasingly silly to have new users install ALARM, even before the
official Fedora launch.

Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,8 +17,9 @@
     </div>
     <div class="download-card center-card">
         <i class="big-icon fas fa-arrow-down"></i>
-        <p>The Asahi Linux alpha release is out!</p>
-        <a href="/2022/03/asahi-linux-alpha-release/" class="more">Check out the announcement<i class="fas fa-angle-right more"></i></a>
+        <p>Fedora Asahi Remix is coming soon!</p>
+        <a href="https://fedora-asahi-remix.org/" class="more">Check out the beta<i class="fas fa-angle-right more"></i></a>
+        <p style="font-style: italic">This is not an official release just yet, but we encourage adventurous users to give Fedora a spin!</p>
     </div>
 </section>
 <section id="community" class="white-text">
