--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,6 +27,19 @@
         <h1>Community</h1>
     </div>
     <div class="community-links">
+        <div class="community-fedora">
+            <div class="community-card">
+                <div class="community-icons">
+                    <i class="big-icon fab fa-discourse"></i>
+                </div>
+                <div class="community-text">
+                    <p>Ask questions and talk with other users on our little corner of Fedora Discussion!</p>
+                </div>
+            </div>
+            <div class="community-button discourse-button">
+                <a rel="me" href="https://discussion.fedoraproject.org/c/neighbors/asahi/92" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Asahi Linux Discussion</a>
+            </div>
+        </div>
         <div class="community-twitter">
             <div class="community-card">
                 <div class="community-icons">
