Fedora Asahi Remix is released 🎉
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,4 @@
+{{ .Scratch.Set "body_class" .Params.body_class }}
 {{ partial "header.html" . }}
 <section id="post-section">
     <div class="post-wrapper">
