--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,17 +29,17 @@
 <body class="{{ .Scratch.Get "body_class" }}">
     <header id="header">
         <div class="header-logo">
-            <a href="/"><img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo.svg" | md5) 0 8 }}" class="logo" alt=""></a>
+            <a href="{{ relLangURL "" }}"><img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo.svg" | md5) 0 8 }}" class="logo" alt=""></a>
         </div>
         <div class="header-menu">
             <ul class="menu-container flex-container">
-                <li><a href="/about">About</a></li>
-                <li><a href="/community">Community</a></li>
-                <li><a href="/contribute">Contribute</a></li>
+                <li><a href="{{ relLangURL "about" }}">{{ T "about" }}</a></li>
+                <li><a href="{{ relLangURL "community" }}">{{ T "community" }}</a></li>
+                <li><a href="{{ relLangURL "contribute" }}">{{ T "contribute" }}</a></li>
                 <li><a href="https://github.com/AsahiLinux">GitHub</a></li>
-                <li><a href="https://github.com/AsahiLinux/docs/wiki">Wiki</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="/support">Donate</a></li>
+                <li><a href="https://github.com/AsahiLinux/docs/wiki">{{ T "wiki" }}</a></li>
+                <li><a href="/blog">{{ T "blog" }}</a></li>
+                <li><a href="{{ relLangURL "support" }}">{{ T "donate" }}</a></li>
             </ul>
         </div>
     </header>
