--- a/static/css/main.css
+++ b/static/css/main.css
@@ -969,7 +969,15 @@ blockquote {
 }
 
 p img, figure img {
+    padding-top: 10px;
     max-width: 100%;
+    height: auto;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .twitter-tweet {
