layouts: Support linking source in image captions
Doesn't break (previous) entries without "source", you can't tell
they're just empty, zero-space paragraphs.

Also minor CSS improvements in multi-line captions.

Signed-off-by: Eileen Yoon <eyn@gmx.com>

--- a/layouts/shortcodes/captioned.html
+++ b/layouts/shortcodes/captioned.html
@@ -1,3 +1,6 @@
 <figure class="captioned">{{ .Inner }}
-{{ with .Get "caption"}}<figcaption><p>{{.}}</p></figcaption>{{end}}
+<figcaption>
+    {{ with .Get "caption"}}<p>{{.}}</p>{{end}}
+    {{ with .Get "link"}}<p><a href={{.}}>{{end}}{{ with .Get "source"}}Source: {{.}}</a>{{end}}</p>
+</figcaption>
 </figure>
