--- a/static/css/main.css
+++ b/static/css/main.css
@@ -981,6 +981,8 @@ p img, figure img {
     padding-top: 10px;
     max-width: 100%;
     height: auto;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .center {
@@ -994,11 +996,15 @@ p img, figure img {
 }
 
 .post figure figcaption p {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 0;
     text-align: center;
     font-weight: 300;
     font-size: 80%;
+}
+
+.post figure {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* Blog */
