--- a/static/css/main.css
+++ b/static/css/main.css
@@ -908,6 +908,14 @@ body.landing #documentation {
     margin-top: 30px;
 }
 
+.post h1 {
+    margin-top: 45px;
+}
+
+.post h2 {
+    margin-bottom: 15px;
+}
+
 .post p, .code-box, .post ul, blockquote {
     margin-bottom: 15px;
     margin-top: 15px;
