index.html: Make copy button work
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -91,4 +91,21 @@
         <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    var btn = document.getElementById("copy-button");
+    btn.onmouseover = function(e) {
+        btn.firstChild.classList.remove("fa-check");
+        btn.firstChild.classList.add("fa-clipboard");
+    }
+    btn.onclick = function(e) {
+        var text = document.getElementById("curl");
+        window.getSelection().selectAllChildren(text);
+        navigator.clipboard.writeText(text.textContent);
+        btn.firstChild.classList.add("fa-check");
+        btn.firstChild.classList.remove("fa-clipboard");
+        e.preventDefault();
+    };
+});
+</script>
 {{ partial "footer.html" . }}
